--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = maProject.settings
-python_paths = .
-python_files = tests.py test_*.py *_tests.py
+testpaths = maProject/apps/study/tests
+python_files = test_*.py *_tests.py
+
