--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,7 @@
 {
-  "python.defaultInterpreterPath": "${workspaceFolder}/venv/bin/python",
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
-  "python.testing.autoTestDiscoverOnSaveEnabled": true,
-
-  // Remove any extra pytest arguments because pytest.ini already specifies testpaths.
-  "python.testing.pytestArgs": [],
-  
-  // Set the working directory to the repository root.
-  "python.testing.cwd": "${workspaceFolder}",
-  
-  "python.envFile": "${workspaceFolder}/.env"
+    "python.testing.pytestArgs": [
+        "maProject"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
