--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,48 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-.env
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environment directories
+myenv/
+.env/
+.venv/
+
+# pipreqs cache or temporary files (if any)
+pipreqs.cache
+# Add any other pipreqs-generated file patterns here if needed
+
+# Django specific
+*.log
+db.sqlite3
+local_settings.py
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Testing and coverage
+.coverage
+.tox/
+.nox/
+.pytest_cache/
+.mypy_cache/
