--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,21 @@
 annotated-types==0.7.0
 anyio==4.8.0
-appnope==0.1.4
 asgiref==3.8.1
-asttokens==3.0.0
-attrs==25.1.0
-backcall==0.2.0
-beautifulsoup4==4.13.3
-bleach==6.2.0
 cachetools==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
-coverage==7.6.12
-decorator==5.1.1
-defusedxml==0.7.1
 distro==1.9.0
 Django==5.1.6
 django-debug-toolbar==5.0.1
-docopt==0.6.2
-execnet==2.1.1
-executing==2.2.0
 factory_boy==3.3.3
-Faker==36.1.0
-fastjsonschema==2.21.1
-google==3.0.0
+Faker @ file:///home/conda/feedstock_root/build_artifacts/faker_1739265284709/work
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.1
 google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.4
-googleapis-common-protos==1.67.0
+googleapis-common-protos==1.67.0rc1
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
@@ -37,69 +23,32 @@ httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
-iniconfig==2.0.0
-ipython==8.12.3
-jedi==0.19.2
-Jinja2==3.1.5
+iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
 jiter==0.8.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mistune==3.1.1
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
+# Editable Git install with no remote (maProject==0.1.0)
+-e /Users/jacobhornsvennevik/Documents/GitHub/maRepo_root
 openai==1.62.0
-packaging==24.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pipreqs==0.5.0
-platformdirs==4.3.6
-pluggy==1.5.0
-prompt_toolkit==3.0.50
+packaging @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_15t4xe1fp0/croot/packaging_1734472125760/work
+pillow==11.1.0
+pluggy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_70ykkrsb12/croot/pluggy_1733169619735/work
 proto-plus==1.26.0
 protobuf==5.29.3
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic_core==2.27.2
-Pygments==2.19.1
 PyMuPDF==1.25.3
 pymupdf4llm==0.0.17
 pyparsing==3.2.1
 pytest==8.3.4
-pytest-cov==6.0.0
-pytest-dotenv==0.5.2
-pytest-xdist==3.6.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pyzmq==26.2.1
-referencing==0.36.2
+pytest-django==4.10.0
 requests==2.32.3
-rpds-py==0.22.3
 rsa==4.9
-six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
 sqlparse==0.5.3
-stack-data==0.6.3
-tinycss2==1.4.0
-tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2025.1
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1737541069190/work
 uritemplate==4.1.1
 urllib3==2.3.0
-wcwidth==0.2.13
-webencodings==0.5.1
-yarg==0.1.9
