Started a bit of frontened

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ------------------------
+# Python & Django
+# ------------------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -26,24 +30,81 @@ myenv/
 .env/
 .venv/
 
-# pipreqs cache or temporary files (if any)
+# Pipreqs cache or temporary files
 pipreqs.cache
-# Add any other pipreqs-generated file patterns here if needed
 
 # Django specific
 *.log
 db.sqlite3
 local_settings.py
+media/  # If you're storing user-uploaded files locally
+staticfiles/  # If using Django’s collectstatic command
+__pycache__/
 
-# IDEs and editors
+# ------------------------
+# Node.js & React
+# ------------------------
+
+# Node modules (massive folder, should not be committed)
+node_modules/
+
+# Build files
+build/
+dist/
+
+# Logs & cache files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# React/Webpack-specific
+.cache/
+.vite/
+.next/
+out/
+
+# Dependency locks
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing & coverage
+coverage/
+.nyc_output/
+
+# ------------------------
+# IDE & Editor Files
+# ------------------------
+
 .vscode/
 .idea/
 *.sublime-project
 *.sublime-workspace
 
-# Testing and coverage
-.coverage
-.tox/
-.nox/
-.pytest_cache/
-.mypy_cache/
+# ------------------------
+# Miscellaneous
+# ------------------------
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+# Linux
+*~
+.nfs*
