--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,4 @@
-node_modules
-package-lock.json
-yarn.lock
-build
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -24,5 +21,3 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.env
