--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.1",
   "private": true,
   "build": {
-      "yarn": "v14.0.0,v16.0.0,v18.0.0",
-      "npm": "v14.0.0,v16.0.0,v18.0.0"
-  },   
+    "yarn": "v14.0.0,v16.0.0,v18.0.0",
+    "npm": "v14.0.0,v16.0.0,v18.0.0"
+  },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "1.8.8",
+    "@chakra-ui/react": "^1.8.9",
     "@chakra-ui/system": "^1.12.1",
     "@chakra-ui/theme-tools": "^1.3.6",
     "@emotion/cache": "^11.7.1",
@@ -32,9 +32,9 @@
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.12.0",
     "react-is": "^18.0.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
