--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "lucide-react": "^0.488.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
+  },
+  "devDependencies": {
+    "@storybook/addon-onboarding": "^8.6.12"
   }
 }
