--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.52.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
