--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -48,6 +49,7 @@
     "@storybook/test": "^8.6.12",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
