--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
