feat: update project and document management features
- Enhanced document model to include upload type choices for better categorization.
- Added new API endpoints for uploading course files, test files, and learning materials with appropriate logging.
- Updated serializers to include the new upload type field.
- Improved project management by integrating project-related functionalities into study materials.
- Refactored settings and environment configurations for better maintainability and security.
- Removed obsolete files and updated requirements for a cleaner project structure.

--- a/.cursor-settings.json
+++ b/.cursor-settings.json
@@ -38,7 +38,7 @@
       "STEP 6: Integrate with React Frontend - Include CSRF_TRUSTED_ORIGINS if using cookie/session auth.",
       "STEP 6: Integrate with React Frontend - Centralize fetch logic in React with Axios interceptors or React Query.",
       "STEP 6: Integrate with React Frontend - Handle token refresh logic for JWT.",
-      "STEP 7: Test, Monitor, Maintain - Write tests for views, serializers, models, and API endpoints.",
+      "STEP 7: Test, Monitor, Maintain - Write tests for views, serializers, models, and API endpoints with pytest.",
       "STEP 7: Test, Monitor, Maintain - Use tools like Sentry and Prometheus for error tracking and performance monitoring.",
       "STEP 7: Test, Monitor, Maintain - Run pip-audit regularly to detect package vulnerabilities.",
       "STEP 7: Test, Monitor, Maintain - Use CI tools (GitHub Actions, GitLab CI) with linters and formatters.",
