--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ pipreqs.cache
 db.sqlite3
 local_settings.py
 media/  # If you're storing user-uploaded files locally
-staticfiles/  # If using Django’s collectstatic command
+staticfiles/  # If using Django's collectstatic command
 __pycache__/
 
 # ------------------------
