--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,15 @@ djangorestframework
 django-cors-headers
 django-debug-toolbar
 python-decouple
-django-redis 
+django-redis
+djangorestframework-simplejwt
+pymupdf4llm
+google-generativeai
+openai
+boto3
+celery
+flower
+django-celery-results
+Pillow
+weasyprint
+beautifulsoup4 
