feat: enhance project setup and testing features (all 108 frontend running)
- Added new devDependencies for Jest testing framework and fetch mocking.
- Updated the GuidedSetup component to include new steps for syllabus upload and extraction results.
- Refactored file upload step to support syllabus uploads and improved project creation logic.
- Enhanced API service to support test mode for mock data handling during development.
- Improved error handling and data transformation for syllabus processing.
- Updated tests to cover new functionalities and ensure robust error handling.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
-    "@storybook/addon-onboarding": "^8.6.12"
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@swc/jest": "^0.2.38",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
