--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,8 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
+    "cypress": "^14.5.3",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "identity-obj-proxy": "^3.0.0",
