refactor: streamline project creation steps by removing deprecated components and updating project setup structure added: progess bar colour and centerd overview project

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@steps-legacy/*": ["./src/app/projects/create/components/steps/_legacy/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
