refactor: update API call in ProjectFiles component to use axiosApi
- Replaced axiosInstance with axiosApi for fetching project data.
- Adjusted the API endpoint to remove the trailing slash for consistency.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
+    "ci:guard:api-prefix": "(command -v rg >/dev/null 2>&1 && rg -n \"(fetch|axios[A-Za-z]*)\\(\\s*['\\\"]/api/\" src apps packages) || node scripts/ci-guard-api-prefix.js",
+    "guard:api": "(command -v rg >/dev/null 2>&1 && rg -n --glob='src/**' \"(fetch\\(|axios(\\.|\\()\\s*['\\\"]/api/|baseURL:\\s*['\\\"]/api)\" ) || node scripts/guard-api-paths.mjs",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coverage:watch": "jest --coverage --watch",
@@ -88,6 +90,7 @@
     "cypress-file-upload": "^5.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "globby": "^14.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
