added some stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,29 @@ myenv/
 .env/
 .venv/
 
+# Environment and secret files (ensure these are never committed)
+.env*
+.secrets*
+.envrc
+.direnv/
+
+# Credentials and service accounts
+*credentials*.json
+service-account*.json
+*.secrets.json
+
+# Keys and certificates
+*.pem
+*.key
+*.p12
+*.pfx
+*.cer
+*.crt
+*.der
+id_rsa
+id_ed25519
+*-key.pem
+
 directory_structure.txt
 
 # Pipreqs cache or temporary files
@@ -81,6 +104,10 @@ pnpm-lock.yaml
 # Testing & coverage
 coverage/
 .nyc_output/
+
+# Large vendored directories (should not be committed)
+trash/node_modules.root/
+trash/
 
 # ------------------------
 # IDE & Editor Files
