--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,20 @@
 # Environment variables
 .env
+.env*
+.secrets*
+.envrc
+.direnv/
+
+# Keys and credentials
+*.pem
+*.key
+*.p12
+*.pfx
+*.cer
+*.crt
+*credentials*.json
+service-account*.json
+*.secrets.json
 
 # Django
 __pycache__/
