--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,6 +23,12 @@
 # misc
 .DS_Store
 *.pem
+*.key
+*.p12
+*.pfx
+*.cer
+*.crt
+*-key.pem
 
 # debug
 npm-debug.log*
@@ -32,6 +38,14 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.secrets*
+.envrc
+.direnv/
+
+# credentials
+*credentials*.json
+service-account*.json
+*.secrets.json
 
 # vercel
 .vercel
